--- a/templates/Service-webhook-server.yaml
+++ b/templates/Service-webhook-server.yaml
@@ -10,7 +10,7 @@ spec:
   - name: https
     port: 443
     protocol: TCP
-    targetPort: 443
+    targetPort: https
   selector:
     app: webhook-server
   type: ClusterIP
