--- a/templates/Service-webhook-server.yaml
+++ b/templates/Service-webhook-server.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: webhook-server
-  name: webhook-server
+    app: kubesec_server
+  name: kubesec_server
 spec:
   ports:
   - name: https
@@ -12,5 +12,5 @@ spec:
     protocol: TCP
     targetPort: https
   selector:
-    app: webhook-server
+    app: kubesec_server
   type: ClusterIP
