--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "kubsec-webhook-helm.fullname" . }}-test-connection"
+  name: "{{ include "kubesec-webhook-helm.fullname" . }}-test-connection"
   labels:
-    {{- include "kubsec-webhook-helm.labels" . | nindent 4 }}
+    {{- include "kubesec-webhook-helm.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "kubsec-webhook-helm.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "kubesec-webhook-helm.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
